Feature: Add franchisee invitation support, providers, dialogs, and integrate with admin dashboards

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1390,7 +1390,49 @@
   "bulkStatusSuccess": "Bulk Success",
   "deleteSuccess": "Delete Successfull",
   "resetToPending": "Reset Status To Pending",
-  "searchPayoutsHint": "Search Payouts"
+  "searchPayoutsHint": "Search Payouts",
+  "ownerHQDashboardTitle": "HQ Owner Dashboard",
+  "platformOwner": "Platform Owner",
+  "inviteFranchiseesTitle": "Invite Franchisees",
+  "inviteFranchisee": "Invite Franchisee",
+  "pendingInvitations": "Pending Invitations",
+  "noPendingInvitations": "No pending invitations.",
+  "franchiseNetworkTitle": "Franchise Network",
+  "viewAllFranchises": "View All",
+  "noFranchisesFound": "No franchises found.",
+  "globalFinancialsTitle": "Global Financials",
+  "overdueInvoices": "Overdue Invoices",
+  "noFinancialData": "No financial data available.",
+  "platformAnalyticsTitle": "Platform Analytics",
+  "totalFranchises": "Total Franchises",
+  "activeUsers": "Active Users",
+  "totalOrders": "Total Orders",
+  "analyticsComingSoon": "Analytics coming soon.",
+  "platformSettingsTitle": "Platform Settings",
+  "platformSettingsComingSoon": "Settings feature coming soon.",
+  "ownerAnnouncementsTitle": "Announcements",
+  "sendAnnouncement": "Send Announcement",
+  "noAnnouncements": "No announcements yet.",
+  "futureFeaturesTitle": "Future Features",
+  "futureFeaturesBody": "More advanced controls for platform owners coming soon.",
+  "redirectingToPlatformOwnerDashboard": "Redirecting To Platform Owner Dashboard",
+  "platformOwnerDashboardTitle": "Platform Owner",
+  "inviteStatusPending": "Pending",
+  "inviteStatusSent": "Sent",
+  "inviteStatusAccepted": "Accepted",
+  "inviteStatusRevoked": "Revoked",
+  "inviteStatusExpired": "Expired",
+  "revokeInvitation": "Revoke Invitation",
+  "confirmRevokeInvitation": "Are you sure you want to revoke this invitation?",
+  "revoke": "Revoke",
+  "invitationRevoked": "Invitation revoked.",
+  "resendInvitation": "Resend Invitation",
+  "franchiseName": "Franchise Name",
+  "franchiseNameHint": "e.g. Pizza Hub",
+  "roleLabel": "{role, select, owner{Owner} admin{Admin} manager{Manager} staff{Staff} other{User}}",
+  "invite": "Invite",
+  "invitationSent": "Invitation sent successfully!",
+  "inviteErrorGeneric": "Failed to send invitation. Please try again."
 
   
   }
