Refactor widgets: Move financial/invoice files to widgets/financials, add new profile/account widgets

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1432,7 +1432,37 @@
   "roleLabel": "{role, select, owner{Owner} admin{Admin} manager{Manager} staff{Staff} other{User}}",
   "invite": "Invite",
   "invitationSent": "Invitation sent successfully!",
-  "inviteErrorGeneric": "Failed to send invitation. Please try again."
+  "inviteErrorGeneric": "Failed to send invitation. Please try again.",
+  "platformKpiMrr": "MRR",
+  "platformKpiArr": "ARR",
+  "platformKpiActiveFranchises": "Active Franchises",
+  "platformKpiRecentPayouts": "Recent Payouts",
+  "platformStatTotalRevenueYtd": "Total Revenue (YTD)",
+  "platformStatSubscriptionRevenue": "Subscription Revenue",
+  "platformStatRoyaltyRevenue": "Royalty Revenue",
+  "platformStatOverdueAmount": "Outstanding/Overdue",
+  "platformOwnerRevenueSummaryTitle": "Platform Revenue Overview",
+  "genericErrorOccurred": "An error occurred.",
+  "failedToLoadData": "Failed to load data.",
+  "account": "Account",
+  "unauthorized": "Unauthorized",
+  "billingAndPayments": "Billing & Payments",
+  "storeBilling": "Store Billing",
+  "securitySettings": "Security Settings",
+  "organization": "Organization",
+  "roles": "Roles",
+  "profileEditContactSupport": "Need to update your profile? Contact support.",
+  "platformOwnerDescription": "You are the platform owner. Manage platform-wide settings, billing, and analytics from the platform dashboard.",
+  "goToPlatformAdmin": "Go to Platform Admin",
+  "noBillingRecords": "No billing records found.",
+  "payments": "Payments",
+  "securityFeaturesComingSoon": "More security features coming soon.",
+  "needHelpContact": "Need help? Contact support below.",
+  "contactSupport": "Contact Support",
+  "paymentMethodManagementComing": "Payment method management coming soon.",
+  "downloadReceiptsExportComing": "Download receipts/export coming soon.",
+  "upgradePlanAddOnsComing": "Upgrade plan and add-ons coming soon.",
+  "phone": "Phone"
 
   
   }
