Update invite workflow, roles, localization, and onboarding screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1429,7 +1429,7 @@
   "resendInvitation": "Resend Invitation",
   "franchiseName": "Franchise Name",
   "franchiseNameHint": "e.g. Pizza Hub",
-  "roleLabel": "{role, select, owner{Owner} admin{Admin} manager{Manager} staff{Staff} other{User}}",
+  "roleLabel": "{role, select,hq_owner{HQ Owner} owner{Owner} admin{Admin} manager{Manager} staff{Staff} other{User}}",
   "invite": "Invite",
   "invitationSent": "Invitation sent successfully!",
   "inviteErrorGeneric": "Failed to send invitation. Please try again.",
@@ -1462,7 +1462,29 @@
   "paymentMethodManagementComing": "Payment method management coming soon.",
   "downloadReceiptsExportComing": "Download receipts/export coming soon.",
   "upgradePlanAddOnsComing": "Upgrade plan and add-ons coming soon.",
-  "phone": "Phone"
+  "phone": "Phone",
+  "acceptInvitation": "Accept Invitation",
+  "inviteNotFound": "Invitation not found.",
+  "inviteRevoked": "This invitation has been revoked.",
+  "inviteAlreadyAccepted": "This invitation has already been accepted.",
+  "inviteWelcome": "Welcome, {email}! You're invited to join the portal.",
+  "inviteForFranchise": "Invited for franchise: {franchiseName}",
+  "inviteSetPassword": "Set your password to activate your account.",
+  "password": "Password",
+  "confirmPassword": "Confirm Password",
+  "passwordTooShort": "Password must be at least 8 characters.",
+  "passwordsDoNotMatch": "Passwords do not match.",
+  "inviteAcceptExisting": "Sign in with your account, then accept this invite.",
+  "inviteAcceptedTitle": "Invitation Accepted!",
+  "inviteAcceptedDesc": "Your invite is now active. Continue to your dashboard.",
+  "inviteAcceptFailed": "Failed to accept invitation. Please try again.",
+  "goToDashboard": "Go to Dashboard",
+  "signInRequiredToAcceptInvite": "Please sign in to accept this invitation.",
+  "loadingInvite": "Loading invitation data...",
+  "failedToLoadData": "Failed to load invitation.",
+  "continueLabel": "Continue",
+  "hours": "Hours",
+  "role_hq_owner": "HQ Owner"
 
   
   }
