Update sign-in flow with email / pass, update cloud function / update localization

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1490,7 +1490,8 @@
   "forgotPassword": "Forgot password?",
   "emailRequired": "Please enter your email address.",
   "passwordTooShort": "Password required (min 6 chars)",
-  "orDivider": "OR"
+  "orDivider": "OR",
+  "inviteMustSignIn": "Invite Must Sign In"
 
   
   }
