✨ Add platform plans & subscriptions modules, summary cards, routing, models, and screens

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1533,7 +1533,34 @@
   "payInvoice": "Pay Invoice",
   "noteDevOnlyPlaceholder": "Placeholder – dev-only payment flow active",
   "statusUnpaid": "Status Unpaid",
-  "statusPartial": "Status Partial"
-
-
+  "statusPartial": "Status Partial",
+  "platformPlansTitle": "Platform Plans",
+  "noPlansAvailable": "No plans are currently defined.",
+  "customPlan": "Custom",
+  "inactive": "Inactive",
+  "perMonth": "per month",
+  "featurePlanComingSoon": "More plan features coming soon...",
+  "franchiseSubscriptionsTitle": "Franchise Subscriptions",
+  "noSubscriptionsFound": "No subscriptions were found.",
+  "franchiseIdLabel": "Franchise ID",
+  "planIdLabel": "Plan",
+  "trialEndsLabel": "Trial ends",
+  "nextBillingLabel": "Next Billing Date",
+  "discountLabel": "Discount",
+  "addSubscription": "Add Subscription",
+  "editSubscription": "Edit Subscription",
+  "plan": "Plan",
+  "pleaseSelectAPlan": "Please select a plan",
+  "subscriptionStatus_active": "Active",
+  "subscriptionStatus_paused": "Paused",
+  "subscriptionStatus_trialing": "Trialing",
+  "subscriptionStatus_canceled": "Canceled",
+  "confirmDeleteTitle": "Delete Subscription?",
+  "confirmDeleteDescription": "This will permanently remove the subscription from Firestore.",
+  "deleteSubscription": "Delete",
+  "bulkDeleteSuccess": "Successfully deleted {count} subscriptions.",
+  "enableBulkSelect": "Enable Bulk Select",
+  "translateStatus": "{status, select, active{Active} paused{Paused} trialing{Trialing} canceled{Canceled} other{Unknown}}",
+  "editPlan": "Edit Plan",
+  "deletePlan": "Delete Plan"
   }
