✅ Finalize Phase 2: Franchise subscription editor fixes, platform subscriptions screen integrated, legacy removed

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1577,6 +1577,12 @@
   "noActiveSubscription": "No Active Subscription",
   "activePlanLabel": "Active Plan",
   "subscriptionLoadError": "Error Loading Subscription",
-  "priceAtSubscription": "Price Of Subscription"
+  "priceAtSubscription": "Price Of Subscription",
+  "subscriptionsListTitle": "Franchise Subscriptions",
+  "planDetails": "Plan Details",
+  "statusActive": "Active",
+  "statusInactive": "Inactive",
+  "unknownDate": "Unknown Date"
+
 
   }
