--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1685,6 +1685,34 @@
   "nextBillingDateLabel": "Next Billing Date",
   "swap": "Swap",
   "toggleSubscriptionTitle": "Toggle Subscription Status",
-  "planSwapperTitle": "Swap Franchise Plan"
+  "planSwapperTitle": "Swap Franchise Plan",
+  "onboardingMenuTitle": "Franchise Onboarding",
+  "onboardingFor": "Onboarding for",
+  "stepIngredients": "Step 1: Ingredients",
+  "stepIngredientsDesc": "Define all ingredients like toppings, sauces, and sides.",
+  "stepCategories": "Step 2: Categories",
+  "stepCategoriesDesc": "Organize your menu into logical sections (e.g. Pizzas, Drinks).",
+  "stepMenuItems": "Step 3: Menu Items",
+  "stepMenuItemsDesc": "Create actual items customers can order, using ingredients and categories.",
+  "stepReview": "Step 4: Final Review",
+  "stepReviewDesc": "Validate all required data before going live.",
+  "progressComingSoon": "Progress tracking and automation coming soon.",
+  "stepMarkedComplete": "Step marked complete!",
+  "onboardingIngredients": "Ingredients",
+  "noIngredientsFound": "No ingredients found",
+  "noIngredientsMessage": "You have not added any ingredients yet. Start by tapping the add button.",
+  "ingredientName": "Name",
+  "ingredientDescription": "Description",
+  "errorSavingIngredient": "Error saving ingredient",
+  "ingredientType": "Ingredient Type",
+  "removable": "Removable",
+  "supportsExtra": "Supports Extra",
+  "sidesAllowed": "Sides Allowed",
+  "saveIngredient": "Save Ingredient",
+  "allergenTags": "Allergen Tags",
+  "deleteIngredient": "Delete Ingredient",
+  "confirmDeleteIngredient": "Are you sure you want to delete this ingredient?",
+  "errorDeletingIngredient": "Error deleting ingredient",
+  "addIngredient": "Add Ingredient"
 
   }
