Fix onboarding ingredients screen routing and loading behavior
- Ensured proper routing via /dashboard?section=onboardingIngredients using Uri.encodeFull in onboarding menu screen
- Wrapped onboarding ingredients route in FranchiseGate in main.dart
- Adjusted FirestoreService to resolve ingredient stream correctly
- Fixed fallback and loading states in onboarding ingredients screen
- Updated English localization strings and landing page

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1713,6 +1713,7 @@
   "deleteIngredient": "Delete Ingredient",
   "confirmDeleteIngredient": "Are you sure you want to delete this ingredient?",
   "errorDeletingIngredient": "Error deleting ingredient",
-  "addIngredient": "Add Ingredient"
+  "addIngredient": "Add Ingredient",
+  "selectAFranchiseFirst": "Please select a franchise first."
 
   }
