Implement full Ingredient Type Management onboarding flow: add screen, JSON import/export tools, Firestore integration, and cleanup obsolete ingredient widgets

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1688,13 +1688,13 @@
   "planSwapperTitle": "Swap Franchise Plan",
   "onboardingMenuTitle": "Franchise Onboarding",
   "onboardingFor": "Onboarding for",
-  "stepIngredients": "Step 1: Ingredients",
+  "stepIngredients": "Step 2: Ingredients",
   "stepIngredientsDesc": "Define all ingredients like toppings, sauces, and sides.",
-  "stepCategories": "Step 2: Categories",
+  "stepCategories": "Step 3: Categories",
   "stepCategoriesDesc": "Organize your menu into logical sections (e.g. Pizzas, Drinks).",
-  "stepMenuItems": "Step 3: Menu Items",
+  "stepMenuItems": "Step 4: Menu Items",
   "stepMenuItemsDesc": "Create actual items customers can order, using ingredients and categories.",
-  "stepReview": "Step 4: Final Review",
+  "stepReview": "Step 5: Final Review",
   "stepReviewDesc": "Validate all required data before going live.",
   "progressComingSoon": "Progress tracking and automation coming soon.",
   "stepMarkedComplete": "Step marked complete!",
@@ -1714,6 +1714,45 @@
   "confirmDeleteIngredient": "Are you sure you want to delete this ingredient?",
   "errorDeletingIngredient": "Error deleting ingredient",
   "addIngredient": "Add Ingredient",
-  "selectAFranchiseFirst": "Please select a franchise first."
+  "selectAFranchiseFirst": "Please select a franchise first.",
+  "ingredientTypes": "Ingredient Types",
+  "addIngredientType": "Add Ingredient Type",
+  "editIngredientType": "Edit Ingredient Type",
+  "noIngredientTypesFound": "No ingredient types found.",
+  "noDescription": "No description provided.",
+  "ingredientTypeDeleted": "Ingredient type deleted",
+  "systemTag": "System Tag",
+  "sortOrder": "Sort Order",
+  "manageIngredientTypes": "Manage Ingredient Types",
+  "pleaseAddIngredientTypesFirst": "Please add at least one ingredient with a type before marking this step complete.",
+  "stepIngredientTypes": "Step 1: Ingredient Types",
+  "stepIngredientTypesDesc": "Create logical ingredient type tags like toppings, sauces, and sides.",
+  "errorGeneric": "Something went wrong. Please try again.",
+  "selectIngredientTypeTemplate": "Select a Starter Template",
+  "templateLoadedSuccessfully": "Template loaded successfully!",
+  "pizzaShopTemplateLabel": "Pizza Shop Starter",
+  "pizzaShopTemplateSubtitle": "Includes cheeses, meats, sauces, and more",
+  "wingBarTemplateLabel": "Wing Bar Starter (Coming Soon)",
+  "wingBarTemplateSubtitle": "Includes dips, sauces, and portion logic",
+  "loadDefaultTypes": "Load Default Types",
+  "deletionBlocked": "Deletion Blocked",
+  "ingredientTypeInUseError": "This ingredient type is currently used by one or more ingredients and cannot be deleted.",
+  "ingredientTypeName": "Name",
+  "ingredientTypeNameHint": "e.g. Toppings",
+  "ingredientTypeAdded": "Ingredient type added",
+  "ingredientTypeNameRequired": "Name is required.",
+  "ingredientTypeUpdated": "Ingredient Type Updated.",
+  "saveChanges": "Save Changes",
+  "revertChanges": "Revert Changes",
+  "invalidJsonFormat": "Invalid JSON format. Please ensure the input is a valid list of ingredient types.",
+  "jsonParseError": "Unable to parse JSON preview.",
+  "noPreviewData": "No preview data available.",
+  "visibleInApp": "Visible in App",
+  "importExportIngredientTypes": "Import / Export Ingredient Types",
+  "editJsonBelow": "Edit the JSON below to import or adjust ingredient types.",
+  "jsonInput": "JSON Input",
+  "preview": "Preview",
+  "importExport": "Import / Export"
+
 
   }
