--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1776,7 +1776,26 @@
     }
   },
   "bulkDeleteIngredientsSuccess": "Bulk Delete Ingredients Success",
-  "stepMarkedIncomplete": "Step marked as incomplete."
+  "stepMarkedIncomplete": "Step marked as incomplete.",
+  "saveSuccessful": "Save Successful",
+  "invalidTypeIdError": "Invalid typeId found for ingredients",
+  "confirmDeleteCategory": "Are you sure you want to delete this category?",
+  "onboardingCategories": "Categories",
+  "addCategoryTitle": "Add Category",
+  "editCategoryTitle": "Edit Category",
+  "categoryNameLabel": "Category Name",
+  "categoryDescriptionLabel": "Category Description",
+  "importSuccess": "Import successful!",
+  "importError": "Failed to import data.",
+  "importExportCategories": "Import/Export Categories",
+  "importExportInstruction": "Paste JSON data to import or edit it before saving.",
+  "jsonData": "JSON Data",
+  "import": "Import",
+  "selectCategoryTemplate": "Select a category template"
+
+
+
+
 
 
   }
