Refactor feature onboarding to use Firestore platform_features; implement dev tools for seeding and deleting platform plans and features; remove deprecated feature_metadata.dart

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1815,9 +1815,44 @@
   "saveErrorTitle": "Save Failed",
   "saveErrorBody": "Unable to save your feature selections. Please try again.",
   "stepFeatureSetup": "Step 1: Feature Setup",
-  "stepFeatureSetupDesc": "Choose which modules and features this franchise will use."
-
-
+  "stepFeatureSetupDesc": "Choose which modules and features this franchise will use.",
+  "seedPlatformFeaturesTitle": "Seed Platform Features",
+  "seedPlatformFeaturesDescription": "Paste a JSON array of feature objects below to overwrite or create entries in the /platform_features collection.",
+  "jsonInputLabel": "Feature JSON Array",
+  "submitSeedData": "Submit Seed Data",
+  "submitting": "Submitting...",
+  "seedSuccess": "✅ Successfully seeded platform features.",
+  "seedFailure": "❌ Failed to seed features. Please check your JSON and try again.",
+  "devtoolsSeedPlatformPlansTitle": "Seed Platform Plans",
+  "devtoolsSeedPlatformPlansDescription": "Input a list of plan objects to store in the /platform_plans collection. Each plan must include a unique 'id' field. Existing entries will be overwritten.",
+  "devtoolsJsonInputLabel": "JSON Input",
+  "devtoolsJsonValidationEmpty": "Input cannot be empty",
+  "devtoolsSeedSuccess": "Seeded successfully!",
+  "devtoolsSeedError": "Failed to seed. Check error logs.",
+  "seed": "Seed",
+  "copySampleJson": "Copy Sample JSON",
+  "sampleJsonCopied": "Sample JSON copied to clipboard!",
+  "deleting": "Deleting...",
+  "devtoolsDeletePlatformPlansTitle": "Delete Platform Plan",
+  "devtoolsSelectPlan": "Select Plan ID",
+  "devtoolsDeleteSuccess": "Plan deleted successfully.",
+  "devtoolsDeleteError": "Failed to delete the plan.",
+  "platformFeaturePlanTools": "Platform Feature + Plan Tools",
+  "subscriptionTools": "Subscription Tools",
+  "billingTools": "Billing Tools",
+  "devtoolsFieldKey": "Key",
+  "devtoolsFieldName": "Name",
+  "devtoolsFieldModule": "Module",
+  "devtoolsFieldDeprecated": "Deprecated",
+  "devtoolsFieldDeveloperOnly": "Developer Only",
+  "devtoolsFieldDescription": "Description",
+  "devtoolsAddFeature": "Add Feature",
+  "devtoolsFeaturesToSeed": "Features to Seed",
+  "devtoolsValidationEmptyFeatureList": "No features to submit.",
+  "devtoolsValidationMissingFields": "Key and Name are required.",
+  "uploadViaJson": "Upload via JSON",
+  "devtoolsDeletePlatformFeaturesTitle": "Delete Platform Feature",
+  "devtoolsSelectFeature": "Select a feature to delete"
 
 
 
