Implement schema repair sidebar and robust validation for onboarding menu items; refactor models and providers for robust reference resolution and repair UX; enable save on schema repair; update localization and all onboarding integration points.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1862,7 +1862,9 @@
   "calories": "Calories",
   "fat": "Fat",
   "carbohydrates": "Carbohydrates",
-  "protein": "Protein"
+  "protein": "Protein",
+  "chooseTemplate": "Choose Template",
+  "template": "Template"
 
 
 
