feat(onboarding): Robust dependency checks for menu items + ingredient type onboarding UI fixes
- Added robust dependency checks to onboarding_menu_items_screen.dart to prevent silent failures when ingredient types, ingredients, or categories are missing. Now surfaces actionable EmptyState UI and navigation buttons for missing prerequisites.
- Improved onboarding_ingredient_type_screen.dart and onboarding_categories_screen.dart for user feedback and bug fixes.
- Enhanced editable_ingredient_type_row.dart and inline_add_ingredient_type_row.dart to support more reliable type creation and editing workflows.
- Updated ingredient_type_provider.dart with fixes and stability improvements for state management.
- Updated localization strings in l10n/app_en.arb for new error messages, step labels, and user guidance.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1890,7 +1890,16 @@
   "createNewCategory": "Create New Category",
   "descriptionOptional": "Description (optional)",
   "selectCategory": "Select Category",
-  "categoryStagedSuccessfully": "Category \"{categoryName}\" staged successfully."
+  "categoryStagedSuccessfully": "Category \"{categoryName}\" staged successfully.",
+  "toDelete": "to delete",
+  "selectAllPrompt": "Select all ingredient types for delete?",
+  "selectAll": "Select All",
+  "missingMenuItemPrereqs": "Menu Item Step Blocked",
+  "menuItemsMissingPrerequisites": "You must complete the following steps before adding menu items: {steps}",
+  "goToStep": "Go to {step}",
+  "stepIngredientTypes": "Ingredient Types",
+  "stepIngredients": "Ingredients",
+  "stepCategories": "Categories"
 
 
 
