--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1899,7 +1899,9 @@
   "goToStep": "Go to {step}",
   "stepIngredientTypes": "Ingredient Types",
   "stepIngredients": "Ingredients",
-  "stepCategories": "Categories"
+  "stepCategories": "Categories",
+  "ingredientsImported": "Imported {count} ingredients."
+
 
 
 
